# gstep

./: Cargo.toml  LICENSE  Makefile  README.md  next-plan.md
.claude/: GSTEP.md
.claude/skills/gstep/: SKILL.md
codex-skills/gstep/: SKILL.md
codex-skills/gstep/agents/: openai.yaml
src/: main.rs
tests/: cli.rs
